--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,182 +1,193 @@
-*{
+* {
     margin: 0px;
-    padding: 0px;    
+    padding: 0px;
     box-sizing: border-box;
-}
-
-body{
-    font-family: 'Roboto', sans-serif;
+    overflow: none;
+  }
+  
+  body {
+    font-family: "Roboto", sans-serif;
     background-color: #ebebeb;
-}
-
-h3{
+  }
+  
+  h3 {
     font-size: 24px;
-}
-
-p{
+  }
+  
+  p {
     font-size: 12px;
-}
-
-div.top-header{
+  }
+  
+  div.top-header {
     display: flex;
     flex-wrap: wrap;
     padding: 2%;
-}
-
-header div.top-header p{
-    width: 100%;
+  }
+  
+  header div.top-header p {
+    width: 90%;
     text-align: center;
     margin-top: 5px;
     margin-bottom: 0;
-}
-
-header{
-    background-color: #EAC926;
+    margin-left: 10px;
+  }
+  
+  header {
+    background-color: #eac926;
     width: 100%;
     height: 150px;
-}
-
-header div.logo,
-header .form{
-    width: 50%;
-}
-
-header div.logo{
+  }
+  
+  header div.logo,
+  header .form {
+    width: 48%;
+  }
+  
+  header div.logo {
     padding: 10px;
-}
-header .form{
+  }
+  
+  header nav .nav {
     display: flex;
-    align-items: center;
-    padding: 2px;
-    font-size: 11px;
-}
-header nav{
+    flex-direction: row;
+    justify-content: space-between;
+    justify-content: space-around;
+  }
+  
+  header nav {
     font-size: 10px;
     margin-left: 20px;
     margin-top: 10px;
     display: none;
-}
-
-header ul li{
+    width: 100%;
+  }
+  
+  header nav .nav li {
     list-style-type: none;
-}
-
-header ul li a{
-    text-decoration: none;
-    color: #000;
-}
-
-header .form .input{
-    background-color: #FFF;
-    border: 1px solid #000;
+    border: solid white 1px;
+    padding: 15px;
+    border-radius: 5px;
+  }
+  
+  header .form {
+    display: flex;
+    align-items: center;
+    padding: 2px;
+    font-size: 11px;
+    background-color: #fff;
+    border: 1px solid #fff;
     outline: none;
     color: #666;
     padding: 2px;
-}
-
-header .form .submit{
-    background-color: #FFF;
-    border: 1px solid #000;
-    color: #666;
-    width: 10%;
-}
-
-header p i{
+    border-radius: 8px;
+    height: 28px;
+    margin-top: 16px;
+  }
+  
+  header p i {
     margin-bottom: 5px;
-}
-
-div.burger-menu{
+  }
+  
+  div.burger-menu {
     text-align: center;
     margin-top: 1px;
-}
-
-div.burger-menu i{
-    background-color: #0044AA;
+  }
+  
+  div.burger-menu i {
+    background-color: #0044aa;
     border-radius: 5px;
-    color: #FFF;
+    color: #fff;
     font-size: 20px;
     height: 40px;
     margin: 0px 0px 20px 0px;
     padding: 10px;
     width: 40px;
-}
-
-div.last-visit,
-div.offers{
+  }
+  
+  div.last-visit,
+  div.offers {
     display: flex;
     flex-wrap: wrap;
-}
-
-.price{
+  }
+  
+  .price {
     font-size: 18px;
     width: 30%;
-}
-
-.discount{
+  }
+  
+  .discount {
     width: 70%;
-}
-
-.discount,
-.description{
+  }
+  
+  .discount,
+  .description {
     font-size: 16px;
     font-weight: normal;
-}
-
-h3,
-.description{
+  }
+  
+  h3,
+  .description {
     color: #666;
-}
-
-.description{
+  }
+  
+  .description {
     display: none;
     margin-top: 20px;
     transition-property: display;
     transition-duration: 5s;
-}
-
-section.banner img{
+  }
+  
+  section.banner img {
     width: 100%;
-    margin: 0;
-}
-
-main{
-    width: 90%;
-    margin: 0 auto;
-}
-
-main section article{
-    background-color: #fff;    
+    margin: 0px;
+    height: 150px;
+  }
+  
+  main {
+    width: 100%;
+    margin: 0px;
+  }
+  
+  main section article {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
     margin: 10px 0px;
-}
-
-main section article img{
+    width: 80%;
+  }
+  
+  main section article img {
     width: 100%;
-}
-
-main section article i,
-.discount{
+  }
+  
+  main section article i,
+  .discount {
     color: #39b54a;
-}
-
-main section article i{
+  }
+  
+  main section article i {
     display: block;
     font-size: 16px;
     padding: 5px;
     width: 30px;
     height: 30px;
     border: 1px solid #39b54a;
-    background-color: #FFF;
+    background-color: #fff;
     border-radius: 50%;
     position: absolute;
     right: 20px;
     top: -15px;
-}
-
-main section h3{
-    margin: 20px 0px;
-}
-
-article div.main-article{
+  }
+  
+  main section .products {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  main section .products article {
+    margin: 10%;
+  }
+  article div.main-article {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -184,23 +195,39 @@ article div.main-article{
     border-top: 1px solid #ebebeb;
     position: relative;
     padding: 15px;
-}
-
-main section div.products article div.main-article i:hover{
+  }
+  
+  main section div.products article div.main-article i:hover {
     transform: rotate(-90deg);
-}
+  }
+  main section h3 {
+    text-align: center;
+    text-align: center;
+  }
 
-.send-button:hover{
+  main .last-visit {
+      margin-top: 25px;
+  }
+  
+  .send-button:hover {
     background-color: #0022aa;
     color: white;
-}
+  }
+  
 
 
 @media (min-width: 361px){
+    header {
+        height: 210px;
+        width: 406px;
+    }
     header nav {
-        display: contents;
+        text-align: center;
+        height: 70px;
+        margin: 0;
+        display: flex;
         flex-direction:row;
-        justify-content: space-around;
+        justify-content: space-between;
         
     }
     nav.nav {
@@ -208,9 +235,6 @@ main section div.products article div.main-article i:hover{
         flex-direction: row;
     }
     
-    header {
-        height: 210px;
-    }
     div.burger-menu i{
         display: none;
     }
