--- a/views/home.html
+++ b/views/home.html
@@ -18,19 +18,17 @@
                     <div class="input">Buscar productos, marcas y más</div>
                     <div class="submit"><i class="fa fa-search"></i></div>
                 </div>
-                <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+                <p>
+                  <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito
+                </p>
             </div>
             <nav>
-                <div class="nav">
-                <ul>
+                <ul class="nav">
                     <li><a href="/home">Inicio</a></li>
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
-                    <div><li><a href="#">Vender</a></li></div>
+                    <li><a href="#">Vender</a></li>
                     <li><a href="#">Ayuda</a></li>
-                </ul>
-            </div>
-                <ul>
                     <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
                     <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
